packages/aku/src/test-utils/source/__fixtures__/errors/bad-cross-module-reexport/bad-cross-module-reexport-entry-point.ts
export { DocumentedClass } from "../../public-api/documented.ts";
